--- a/templates/opening.html
+++ b/templates/opening.html
@@ -6,8 +6,8 @@
 	<body>
 		<div align="center">
 			<h1>CMU Text-Change</h1>
-			<a href="/textbook/buyer" class="buyer">BUYER</a>
-			<a href="/textbook/seller" class="seller">SELLER</a>
+			<a href="/buyer.html" class="buyer">BUYER</a>
+			<a href="/seller.html" class="seller">SELLER</a>
 		</div>
 	</body>
 	<style type="text/css">
