--- a/templates/seller.html
+++ b/templates/seller.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--barbara was here-->
 <html>
   <head>
   	<title>CMU Text-CHANGE</title>
@@ -10,7 +9,7 @@
     <div align="center">
       <a href="http://s416.photobucket.com/user/sa222blah/media/ScreenShot2014-02-01at91031AM_zps1e91b37d.png.html" target="_blank"><img src="http://i416.photobucket.com/albums/pp247/sa222blah/ScreenShot2014-02-01at91031AM_zps1e91b37d.png" border="0" alt=" photo ScreenShot2014-02-01at91031AM_zps1e91b37d.png"/></a>
     	<p>Enter the course number and price you are willing to sell it for.</p>
-    	<form action='/textbook/new' method='post'>
+    	<form action='/saleposted.html' method='post'>
   	    <input type='text' name = "email" id='email' placeholder='E-mail'>
   	    <input type='text' name = "courseNum" id='courseNumber' placeholder='Course Number'>
         <input type='text' name = "textName" id='textName' placeholder='Textbook Name'>
