--- a/templates/buyer.html
+++ b/templates/buyer.html
@@ -2,7 +2,7 @@
 	<body>
 		<div align="center">
 			<img src="http://i416.photobucket.com/albums/pp247/sa222blah/buyer_zpsdac0d1e2.jpg" border="0" alt=" photo buyer_zpsdac0d1e2.jpg"/>
-			<form action='/textbook/search' method=POST>
+			<form action='/textbooks.html' method=POST>
 			<input type='text' name = "course" id='course' placeholder='Course Number'>
 			<button type="submit">Submit</button>
 			</form>
