--- a/templates/textbooks.html
+++ b/templates/textbooks.html
@@ -1,6 +1,6 @@
 <html>
 	{%for book in rows%}
-		{{rows}}
+		{{book}}
 	<!--			Email: {{ book.email }}<br>
 			Course Number: {{ book.courseNum}}<br>
 			Textbook Name: {{book.name}}<br>
