--- a/templates/textbooks.html
+++ b/templates/textbooks.html
@@ -1,11 +1,13 @@
 <html>
-	{% for book in rows %}
+	{{ htmln }}
+	<!--{% for book in rows %}
 		{{ book }}
-	<!--			Email: {{ book.email }}<br>
+				Email: {{ book.email }}<br>
 			Course Number: {{ book.courseNum}}<br>
 			Textbook Name: {{book.name}}<br>
-			Price: {{book.price}}<br>-->
+			Price: {{book.price}}<br>
 			<br></br>
 			<br></br>
-	{% endfor %}
+	{% endfor %}-->
+
 </html>
