--- a/templates/opening.html
+++ b/templates/opening.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CMU Text-CHANGE</title>
+		<title>CMU TextChange</title>
 	</head>
 	<body>
 		<div align="center">
-			<h1>CMU Text-Change</h1>
+			<h1>CMU TextChange</h1>
+			<h2>An online marketplace for used books at CMU</h2>
 			<a href="/buyer.html" class="buyer">BUYER</a>
 			<a href="/seller.html" class="seller">SELLER</a>
 		</div>
 	</body>
 	<style type="text/css">
+		body {
+			background-color:#FFF7D6;
+		}
 		.verticalLine {
 			font-size: 100px;
     		width: 0px;
+		}
+		h1 {
+			font-size: 75px;
+			font-family: Verdana, sans-serif;
+		}
+		h2 {
+			font-family: Verdana, sans-serif;
 		}
 		.buyer {
 			vertical-align: -150px;
