--- a/templates/textbooks.html
+++ b/templates/textbooks.html
@@ -1,13 +1,19 @@
 <html>
-	{{ htmln }}
-	<!--{% for book in rows %}
-		{{ book }}
-				Email: {{ book.email }}<br>
-			Course Number: {{ book.courseNum}}<br>
-			Textbook Name: {{book.name}}<br>
-			Price: {{book.price}}<br>
-			<br></br>
-			<br></br>
-	{% endfor %}-->
-
+<h1>Textbooks for Sale</h1>
+<h2>Course Number: 73100</h2>
+<li>
+	Book Name: Economics
+	E-mail: sazad@andrew.cmu.edu
+	Price: $5
+</li>
+<li>
+	Book Name: Princ. of Economics
+	E-mail: jdoe@andrew.cmu.edu
+	Price: $15
+</li>
+<li>
+	Book Name: econ
+	E-mail: llamma@andrew.cmu.edu
+	Price: $25
+</li>
 </html>
