--- a/templates/textbooks.html
+++ b/templates/textbooks.html
@@ -2,18 +2,20 @@
 <h1>Textbooks for Sale</h1>
 <h2>Course Number: 73100</h2>
 <li>
-	Book Name: Economics
-	E-mail: sazad@andrew.cmu.edu
-	Price: $5
+	Book Name: Economics<br>
+	E-mail: sazad@andrew.cmu.edu<br>
+	Price: $5<br>
 </li>
+<hr>
 <li>
-	Book Name: Princ. of Economics
-	E-mail: jdoe@andrew.cmu.edu
-	Price: $15
+	Book Name: Princ. of Economics<br>
+	E-mail: jdoe@andrew.cmu.edu<br>
+	Price: $15<br>
 </li>
+<hr>
 <li>
-	Book Name: econ
-	E-mail: llamma@andrew.cmu.edu
-	Price: $25
+	Book Name: econ<br>
+	E-mail: llamma@andrew.cmu.edu<br>
+	Price: $25<br>
 </li>
 </html>
